// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billing actions fetch billing contact information failure 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 400],
    "reason": "Unable to get billing contact information.",
    "type": "FETCH_BILLING_CONTACT_ERROR",
  },
]
`;

exports[`billing actions fetch billing contact information success 1`] = `
Array [
  Object {
    "billingContact": Object {
      "email": "hello@acme.gorgias.io",
      "shipping": Object {
        "address": Object {
          "city": "San Francisco",
          "country": "United States",
          "line1": "52 Washburn St",
          "line2": "",
          "postal_code": "94103",
          "state": "CA",
        },
        "name": "Gorgias",
        "phone": "4155555556",
      },
    },
    "type": "FETCH_BILLING_CONTACT_SUCCESS",
  },
]
`;

exports[`billing actions fetch credit card 1`] = `
Array [
  Object {
    "resp": Object {
      "brand": "visa",
      "exp_month": 12,
      "exp_year": 35,
      "last4": "4242",
    },
    "type": "FETCH_CREDIT_CARD_SUCCESS",
  },
]
`;

exports[`billing actions fetch current usage 1`] = `
Array [
  Object {
    "resp": Object {
      "data": Object {
        "cost": 12.35,
        "ticket": 12323,
      },
      "meta": Object {
        "endDate": "2016-12-13T18:30:19+00:00",
        "startDate": "2016-11-13T18:30:19+00:00",
      },
    },
    "type": "FETCH_CURRENT_USAGE_SUCCESS",
  },
]
`;

exports[`billing actions fetch invoices 1`] = `
Array [
  Object {
    "resp": Array [
      Object {
        "amount_due": 1234,
        "date": "2016-11-13T18:30:19+00:00",
        "metadata": Object {},
        "paid": true,
      },
    ],
    "type": "FETCH_INVOICES_SUCCESS",
  },
]
`;

exports[`billing actions fetch payment method 1`] = `
Array [
  Object {
    "resp": Object {
      "active": false,
      "method": "stripe",
    },
    "type": "FETCH_PAYMENT_METHOD_SUCCESS",
  },
]
`;

exports[`billing actions setCreditCard() should return a Redux action to set the credit card of the current account. 1`] = `
Object {
  "creditCard": Immutable.Map {
    "last4": "6412",
    "brand": "mastercard",
    "name": "Steve Frizeli",
    "exp_month": "12",
    "exp_year": "24",
  },
  "type": "SET_CREDIT_CARD",
}
`;

exports[`billing actions setFutureSubscriptionPlan() should return a Redux action to set the future subscription plan. 1`] = `
Object {
  "planId": "advanced-usd-1",
  "type": "SET_FUTURE_SUBSCRIPTION_PLAN",
}
`;

exports[`billing actions update billing contact information failure 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 400],
    "reason": "Unable to update billing contact information.",
    "type": "UPDATE_BILLING_CONTACT_ERROR",
    "verbose": true,
  },
]
`;

exports[`billing actions update billing contact information success 1`] = `
Array [
  Object {
    "billingContact": Object {
      "email": "hello@acme.gorgias.io",
      "shipping": Object {
        "address": Object {
          "city": "San Francisco",
          "country": "United States",
          "line1": "52 Washburn St",
          "line2": "",
          "postal_code": "94103",
          "state": "CA",
        },
        "name": "Gorgias",
        "phone": "4155555556",
      },
    },
    "type": "UPDATE_BILLING_CONTACT_SUCCESS",
  },
]
`;

exports[`billing actions updateInvoiceInList() should return a Redux action to update an invoice in a list of invoices. 1`] = `
Object {
  "invoice": Immutable.Map {
    "id": "in_dnu3xd0i2n3f0",
    "paid": false,
  },
  "type": "UPDATE_INVOICE_IN_LIST",
}
`;
